--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>PSI Experiment</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.js"></script>
-    <style>
-        #symbols button { font-size: 24px; margin: 5px; }
-    </style>
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
     <div id="status">Connecting...</div>
